--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 [Bb]uilds/
 [Ll]ogs/
 
+#except the build for webGL
+!docs/*
+
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # [Aa]ssets/AssetStoreTools*
 
